Refactor imports and utilize `getFirst()` for improved readability and consistency across monitoring and error-handling samples.